--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -21,8 +21,8 @@ jobs:
           pip install -r requirements.txt
       - name: Run flake8
         run: flake8 .
-      - name: Run mypy
-        run: mypy .
+#      - name: Run mypy
+#        run: mypy .
       - name: Run black
         run: black --diff --check .
       - name: Run isort
